test_suite/tests/compile-fail/macros/sm/invalid-states-block.rs
extern crate sm_macro;
use sm_macro::sm;

sm!{
    Lock {
        InvalidName { Locked, Unlocked }
        //~^ ERROR expected `States { ... }` block
    }
}
